--- a/profile.html
+++ b/profile.html
@@ -48,7 +48,7 @@
     <!-- Data of user  -->
     <div class="container-fluid d-flex mx-2 my-4">
         <div class="profile_icon" style="width: 18rem;">
-            <img class="w-50 mx-4" src="/ProfilePictureMaker.png" alt="" srcset="">
+            <img class="w-50 mx-4" src="/asset/ProfilePictureMaker.png" alt="" srcset="">
         </div>
         <div class="user_data me-5">
             <h4>username</h4>
